@@ -8,6 +8,7 @@ Jump Start Changelog
 * Added unique HTML ID's to sections of custom layouts like `page-slug-section-1`.
 * Expanded options for divider component.
 * Fixed issues with new Footer Sync feature and using Columns element. Make sure to update Layout Builder plugin to v2.0.2, also.
+* Fixed "color" value of "typography" option type.
 * Fixed fatal error with WooCommerce.
 
 2.0.0-beta1
